--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGO_DB_URI: mongodb+srv://juseljus:Ck1joRhMwuvHKBxL@online-store.ygfofs7.mongodb.net/?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID: 637727014951-7p83cebgs7r6t430kjrep3fr58g3p0hh.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET: 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
+NEXTAUTH_URL: http://localhost:3000
+NEXTAUTH_SECRET: secret
